--- a/RV2015/paper.tex
+++ b/RV2015/paper.tex
@@ -102,7 +102,7 @@
 
 \begin{document}
 
-\title{Who's Watching the Watchers } 
+\title{Watching the Watchers } 
 \titlerunning{Watching the Watchers}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
