--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -3,7 +3,7 @@ Runtime Verification (RV), where monitors detect and respond to
 property violations at runtime, can help address several of the
 verification challenges facing ultra-critical
 systems~\cite{pike-rv-11}.  As RV matures
-it will be employed to verify more and more sophisticated
+it will be employed to verify increasingly complex 
 properties. For instance, checking complex stability properties of a
 control system or ensuring that a critical system is fault-tolerant.
 Strictly regulated ultra-critical areas such as civil aviation,
@@ -17,20 +17,27 @@ monitors in ultra-critical systems are to be the last line of defense,
 then we need to ensure they are correct.  As the monitors we execute
 at runtime become more and more sophisticated, applying formal
 verification tools to the monitors to ensure they are correct can help
-safeguard that the last line of defense is actually effective. The
-ongoing work described here focuses on the verification of safety
-properties by applying temporal reasoning using a first order logic
-with built in theories for equality over uninterpreted symbols and
-linear real and integer arithmetic. To date our work has focused on
-verifying inductive properties by applying $k-$induction using
-Satisfiability Modulo Theories (SMT) based model checking. 
+safeguard that the last line of defense is actually effective. 
 
+
+This paper documents our first efforts in incorporating formal
+verification of monitors with a RV framework. 
 The case study applies our approach to the Copilot language, and
  framework initially developed at the National Institute of Aerospace
  and Galois Inc under a contract to NASA~\cite{copilot,pike-isse-13}.  
+Inspired by reports from working engineers on the utility of the integration of model checking into the Lustre
+framework~\cite{Hagen08} our initial efforts have focused on the
+verification of safety properties using advanced  Satisfiability Modulo Theories
+(SMT) based bounded model checking~\cite{ClarkeBounded01} tools.
 
-
-
+ 
+The next section provides the reader with the necessary background on
+Copilot. Section~\ref{sec:prover} introduces the new Copilot prover interface
+that we. In Section~ref{sec:example}  several examples illustrate the
+application of the tool to the Boyer-Moore majority vote
+algorithm. Section~\ref{sec:structure} provides an overview of
+implementation details. Finally, Section~\ref{sec:conclusion}
+discusses future work and concludes. 
 
 %Copilot is a stream
 %  language for generating embedded C-code monitors for verifying
