some small changes

--- a/RV2015/conclusion.tex
+++ b/RV2015/conclusion.tex
@@ -14,7 +14,7 @@ are promising.
  flexible interface. Given we already output SMTlib format in order to
  interface with Yices, we will investigate connecting to other provers
  that use that input format. Finally, we shall investigate interfacing
- with MetiTarski~\cite{TTT}.
+ with MetiTarski~\cite{AkbarpourPaulson}.
 
 
 \subsubsection{Acknowledgements} We would like to thank Dr. George Hagen
