--- a/RV2015/paper.bib
+++ b/RV2015/paper.bib
@@ -1563,13 +1563,12 @@ and J.  Svenningsson and A. Vajda},
   pages     = {543--560}
 }
 
-@Proceedings{Hagen08,
-  authur = {G. Hagen and C. Tinelli}, 
-  title = 	 {Scaling up the formal verification of Lustre programs with
-  SMT-based techniques},
+@inproceedings{Hagen08,
+  author = {G. Hagen and C. Tinelli}, 
+  title = 	 {Scaling up the formal verification of Lustre programs with SMT-based techniques},
   year = 	 {2008},
   booktitle = {Proceedings of the 8th International Conference on Formal Methods in Computer-Aided Design (FMCAD 08)},
-  OPTpublisher = {IEEE}
+  publisher = {IEEE}
 }
 
 
@@ -1736,3 +1735,23 @@ and J.  Svenningsson and A. Vajda},
   pages =        {737--744},
   month = 	 {July},
   publisher =    {Springer}}
+
+@Misc{Kind2,
+ author =  {University of Iowa: Kind Research Group},
+  title = 	 {Kind 2: {M}ulti-engine {SMT}-based {A}utomatic {M}odel {C}hecker},
+  note = {\url{http://kind2-mc.github.io/kind2/}}
+}
+
+
+
+
+@Article{AkbarpourPaulson,
+  author = 	 {{B}ehzad {A}kbarpour and {L.C. P}aulson},
+  title = 	 {{M}eti{T}arski: an Automatic Theorem Prover for Real-Valued Special Functions},
+  journal = 	 {Journal of Automated Reasoning},
+  year = 	 {2010},
+  volume = 	 {44},
+  number = 	 {3},
+  pages = 	 {175-205}
+}
+
