some more small changes

--- a/RV2015/prover.tex
+++ b/RV2015/prover.tex
@@ -3,7 +3,7 @@ We have modified  the Copilot framework with an extensible interface to multiple
 provers aimed at checking  safety properties on Copilot
 programs. Currently Copilot interacts with two provers: the first is a
 homegrown prover we call ``the light prover'' built on top of
-Yices~\cite{Dutertre:cav2014} and the second is the Kind 2 prover~\cite{ZZZ} being developed at
+Yices~\cite{Dutertre:cav2014} and the second is the Kind 2 model checker~\cite{kind2} being developed at
 the University of Iowa.  
 
 Let us illustrate the use of the verification functionality with a
