--- a/RV2015/paper.tex
+++ b/RV2015/paper.tex
@@ -47,8 +47,9 @@
 \definecolor{mymauve}{rgb}{0.58,0,0.82}
 
 \lstset{ %
-  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
   basicstyle=\footnotesize,        % the size of the fonts that are used for the code
+  basicstyle=\ttfamily,
+  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
   breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
   breaklines=true,                 % sets automatic line breaking
   captionpos=b,                    % sets the caption-position to bottom
@@ -117,7 +118,7 @@
 \tocauthor{Jonathan Laurent, and Alwyn Goodloe}
 %
 \institute{\'{E}cole Normale Sup\'{e}rieure, Paris, France,\\
-\email{]jlaurent@clipper.ens.fr}, \and
+\email{jlaurent@clipper.ens.fr}, \and
 NASA Langley Research Center,
 Hampton, Virginia, USA, \\
 \email{a.goodloe@nasa.gov}}
