--- a/RV2015/Structure.tex
+++ b/RV2015/Structure.tex
@@ -14,10 +14,10 @@
    %\node[state]        (Cnub) [below of = Core]       {Cnub}; 
    \node[state]        (TransSys) [left of=Core] {$\mathrm{Transition  Sys}$};
    \node[state]        (IL) [right of =Core] {IL}; 
-    \node[state]       (SmtLib) [right of=IL] {SMT LIB Format};
+    \node[state]       (SmtLib) [right of=IL] {SMT LIB};
  %  \node[state]        (NMTransSys)[below left of = TransSys]   {$\mathrm{Transition  Sys}^{nm}$} ;
   % \node[state]        (MprimeTransSys)[below right of = TransSys] {$\mathrm{Transition  Sys}^{m}$} ;
-    \node[state]       (Kind2Native) [left of = TransSys]{Kind 2 Format} ;
+    \node[state]       (Kind2Native) [left of = TransSys]{Kind 2} ;
     \tikzstyle{every node}=[]
 
     \path 
