added background section but over page limit

--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -33,8 +33,9 @@ checking~\cite{ClarkeBounded01} tools.
 
  
 The next section provides the reader with the necessary background on
-Copilot. Section~\ref{sec:prover} introduces the new Copilot prover interface
-that we. In Section~\ref{sec:example}  several examples illustrate the
+Copilot. Section~\ref{sec:background}  gives a brief introduction to
+the 
+$k-$induction proof technique we apply to verify monitors. Section~\ref{sec:prover} introduces the new Copilot prover interface. In Section~\ref{sec:example}  several examples illustrate the
 application of the tool to the Boyer-Moore majority vote
 algorithm. Section~\ref{sec:structure} provides an overview of
 implementation details. Finally, Section~\ref{sec:conclusion}
